feat: implements v2/industries
